--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vueuse/core": "^10.7.1",
     "@vueuse/head": "^2.0.0",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.4.4",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5"
