--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "@vueuse/core": "^10.7.1",
     "@vueuse/head": "^2.0.0",
+    "@vueuse/motion": "^2.1.0",
+    "gsap": "^3.12.5",
+    "keen-slider": "^6.8.6",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.4.4",
@@ -38,15 +42,18 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "2.6.1",
+    "@iconify-json/carbon": "^1.1.29",
     "@iconify-json/mdi": "^1.1.64",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@types/node": "^20.10.6",
+    "@types/uuid": "^9.0.8",
     "@unocss/preset-attributify": "^0.58.3",
     "@unocss/preset-icons": "^0.58.3",
     "@unocss/preset-uno": "^0.58.3",
     "@unocss/reset": "^0.58.3",
     "@unocss/transformer-directives": "^0.58.3",
     "@unocss/transformer-variant-group": "^0.58.3",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-vue": "^5.0.2",
     "@vue/compiler-sfc": "^3.4.4",
     "cross-env": "^7.0.3",
